# ion-schema-rust

./: .gitignore  .gitmodules  Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: cli.yaml  load_schema.rs  schema.rs
ion-schema/: Cargo.toml
ion-schema-tests-runner/: Cargo.toml  build.rs
ion-schema-tests-runner/src/: generator.rs  lib.rs  model.rs
ion-schema-tests-runner/tests/: ion-schema-tests-1-0.rs  ion-schema-tests-2-0.rs
ion-schema/examples/: schema.rs
ion-schema/src/: authority.rs  constraint.rs  ion_extension.rs  ion_path.rs  ion_schema_element.rs  lib.rs  nfa.rs  ordered_elements_nfa.rs  result.rs  schema.rs  system.rs  type_reference.rs  types.rs  violation.rs
ion-schema/src/isl/: isl_constraint.rs  isl_import.rs  isl_range.rs  isl_type.rs  isl_type_reference.rs  mod.rs  ranges.rs  util.rs
ion-schema/src/isl/version_based_isl/: mod.rs
ion-schema/src/isl/version_based_isl/constraints/: all_of.rs  any_of.rs  mod.rs  not.rs  one_of.rs  open_content.rs  type.rs
ion-schema/tests/: ion_schema_tests_runner.rs  reexport_external.rs
src/: authority.rs  constraint.rs  constraints.rs  import.rs  imports.rs  isl.rs  lib.rs  result.rs  schema.rs  system.rs  types.rs  violation.rs  violations.rs
src/isl/: core_types.rs  isl_constraint.rs  isl_import.rs  isl_range.rs  isl_type.rs  isl_type_reference.rs  mod.rs  util.rs
tests/: ion_schema_tests_runner.rs  reexport_external.rs
wasm-schema-sandbox/: Cargo.toml  LICENSE_MIT  README.md
wasm-schema-sandbox/src/: lib.rs
wasm-schema-sandbox/www/: index.html  index.js  package.json
wasm-schema-sandbox/www/css/: ion-schema-sandbox.css
