[package]
name = "ion-schema"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ion-rs = "0.7.0"
thiserror = "1.0"
num-bigint = "0.3"
num-traits = "0.2"
chrono = "0.4"

[dev-dependencies]
rstest = "0.9"
clap = {version = "2.33.3", features = ["yaml"]}