[package]
name = "ion-schema"
authors = ["Amazon Ion Team <ion-team@amazon.com>"]
description = "Implementation of Amazon Ion Schema"
homepage = "https://github.com/amzn/ion-schema-rust"
repository = "https://github.com/amzn/ion-schema-rust"
license = "Apache-2.0"
readme = "README.md"
keywords = ["ion", "schema"]
exclude = [
    "**/.git/**",
    "**/.github/**",
    "**/.travis.yml",
    "**/.appveyor.yml",
    "**/ion-schema-tests/**",
    "**/ion-schema-schemas/isl/**",
    "*.pdf"
]
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ion-rs = "0.10.0"
thiserror = "1.0"
num-bigint = "0.3"
num-traits = "0.2"
chrono = "0.4"

[dev-dependencies]
rstest = "0.9"
clap = {version = "2.33.3", features = ["yaml"]}
test-generator = "0.3.0"