[package]
name = "ion-schema"
authors = ["Amazon Ion Team <ion-team@amazon.com>"]
description = "Implementation of Amazon Ion Schema"
homepage = "https://github.com/amazon-ion/ion-schema-rust"
repository = "https://github.com/amazon-ion/ion-schema-rust"
license = "Apache-2.0"
readme = "../README.md"
keywords = ["ion", "schema"]
exclude = [
    "**/.git/**",
    "**/.github/**",
    "**/.travis.yml",
    "**/.appveyor.yml",
    "**/ion-schema-tests/**",
    "**/ion-schema-schemas/isl/**",
    "*.pdf"
]
version = "0.9.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ion-rs = "0.18.1"
thiserror = "1.0"
num-bigint = "0.3"
num-traits = "0.2"
# chrono < 0.5 brings in a deprecated version of the `time` crate via `oldtime` feature by default
# this makes it explicitly not do this as there is an advisory warning against this:
# See: https://github.com/chronotope/chrono/issues/602 
# and  https://github.com/chronotope/chrono/issues/1073
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "wasmbind"] }
regex = "1.5.6"
half = "2.2.1"

[dev-dependencies]
rstest = "0.9"
clap = {version = "2.33.3", features = ["yaml"]}
test-generator = "0.3.0"