[package]
name = "wasm-ion-schema"
version = "0.1.0"
authors = ["Amazon Ion Team <ion-team@amazon.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.82"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
js-sys = "0.3.61"
ion-schema = { path="../ion-schema" }

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
]
[dev-dependencies]
wasm-bindgen-test = "0.3.32"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
